# aws-todo

./: .gitignore  AGENT.md  README.md  compose.yaml
.github/: CODEOWNERS
.github/actions/aws-session/: action.yml
.github/actions/image-release/: action.yml
.github/actions/terraform-operation/: action.yml
.github/actions/validate-workflow-request/: action.yml
.github/workflows/: container-images.yml  terraform.yml
app/backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
app/backend/tests/: conftest.py  test_api.py
app/backend/todo_api/: __init__.py  logging_config.py  main.py  models.py  repository.py
app/frontend/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vitest.config.ts
app/frontend/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
app/frontend/lib/: api.ts  types.ts
docs/: alb-and-security-groups.md  application.md  architecture.md  autoscaling.md  aws-networking.md  cloudwatch-monitoring.md  container-image-pipeline.md  cost-considerations.md  docker.md  ecs-fargate.md  github-actions.md  github-oidc-aws.md  operations.md  remote-state.md  security.md  setup-guide.md  terraform-pipeline.md  terraform.md  terragrunt-multi-account.md  troubleshooting.md
infra/: README.md
infra/live/: root.hcl
infra/live/dev/: terragrunt.hcl
infra/live/prod/: terragrunt.hcl
infra/live/staging/: terragrunt.hcl
infra/modules/ecs-todo/: .terraform.lock.hcl  .tflint.hcl  alb.tf  autoscaling.tf  data.tf  ecs.tf  iam.tf  locals.tf  monitoring.tf  outputs.tf  variables.tf  (+3 more)
