[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-api"
version = "1.0.0"
description = "In-memory FastAPI Todo demonstration service"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.116.1",
  "pydantic==2.11.7",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1",
  "pytest-asyncio==1.1.0",
  "ruff==0.12.4",
]

[tool.setuptools.packages.find]
include = ["todo_api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

